Closed Bug 1633354 Opened 4 years ago Closed 4 years ago

Font visibility is not set correctly for language-pack fonts on Windows

Categories

(Core :: Layout: Text and Fonts, defect, P1)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 + fixed
firefox77 + fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

Details

Attachments

(1 file)

The font-family telemetry added by bug 1619349 is broken for Windows because of a copy/paste error in the DirectWrite impl of GetVisibilityForFamily -- it never returns the LangPack value. :(

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d1528a1d13c2
Fix visibility attribute for language-pack fonts on windows. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

Comment on attachment 9143565 [details]
Bug 1633354 - Fix visibility attribute for language-pack fonts on windows. r=jwatt

Beta/Release Uplift Approval Request

  • User impact if declined: Telemetry intended to inform plans for anti-fingerprinting work will not be valid.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial fix to get telemetry counts into the right bucket (no user-visible impact).
  • String changes made/needed:
Attachment #9143565 - Flags: approval-mozilla-beta?

Comment on attachment 9143565 [details]
Bug 1633354 - Fix visibility attribute for language-pack fonts on windows. r=jwatt

76 is on release now.

Attachment #9143565 - Flags: approval-mozilla-beta? → approval-mozilla-release?

Changing the priority to p1 as the bug is tracked by a release manager for the current beta.
See What Do You Triage for more information

Priority: P3 → P1

Comment on attachment 9143565 [details]
Bug 1633354 - Fix visibility attribute for language-pack fonts on windows. r=jwatt

Approved for 76.0rc2.

Attachment #9143565 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: