Bug 1633354 - Fix visibility attribute for language-pack fonts on windows. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D72609